# wnetdeconv

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENCE  README.md  optimization_example.py  pyproject.toml  reinstall.sh  tests_1D.py  tests_2D.py  utils.py
.github/workflows/: build_wheels.yml  run_tests.yml
data/Magnestein/real_proportions_area/: real_proportions_e1.csv  real_proportions_e2.csv  real_proportions_e3.csv  real_proportions_e5.csv  real_proportions_e6.csv  real_proportions_e7.csv  real_proportions_e8.csv
experiments/: README_cost_map_2d.md  bench_warm_start.py  benchmark_methods.py  convex.py  cost_map_2d.py  cost_map_Nd.py  data_loader.py  experiments_support.py  hemoglobin_deconv.py  minimal_dense_noise_divergence.py
pytest/: test_basic.py  test_import.py
src/wnetdeconv/: __init__.py  __main__.py  solver.py  spectrum.py
src/wnetdeconv/cpp/wnetdeconv/: wnetdeconv.cpp
