[build-system]
requires = ["scikit-build-core", "nanobind", "pylmcf", "wnet>=1.1.0"]
build-backend = "scikit_build_core.build"

[project]
name = "wnetdeconv"
version = "0.9.1"
description = "Python implementation of spectral deconvolution using Wasserstein metric"
requires-python = ">=3.9"
dependencies = ["pylmcf", "numpy", "scipy", "wnet>=1.1.0"]
authors = [{ name="Michał Startek", email="michal.startek@mimuw.edu.pl" }]
maintainers = [{ name="Michał Startek", email="michal.startek@mimuw.edu.pl" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENCE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
]

[project.urls]
"Homepage" = "https://github.com/michalsta/wnetdeconv"
"Repository" = "https://github.com/michalsta/wnetdeconv.git"

[project.optional-dependencies]
extras = ["pyopenms"]
pytest = ["pytest", "pandas"]

[tool.pytest.ini_options]
testpaths = ["pytest"]

[tool.scikit-build.sdist]
exclude = [
    ".github/",
    "experiments/",
    "pytest/",
    "optimization_example.py",
    "reinstall.sh",
    ".gitignore",
]
